--- a/WhiteBears/Views/Project/TaskEditView.cshtml
+++ b/WhiteBears/Views/Project/TaskEditView.cshtml
@@ -19,7 +19,7 @@
             <form> 
                     <!-- Errors -->
                     <div class="form-group row">
-                        <div class="col-sm-12" id="taskErrors">
+                        <div class="col-sm-12" id="taskEditErrors">
 
                         </div>
                     </div>
