--- a/WhiteBears/Views/Project/TaskEditView.cshtml
+++ b/WhiteBears/Views/Project/TaskEditView.cshtml
@@ -10,91 +10,80 @@
         <!-- Modal content-->
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title">Edit Task</h4>
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-            </div>
-            <div class="modal-body">
+                <div class="col-sm-6">
+                    <h4 class="modal-title">Edit</h4>
+                </div>
+                <div class="col-sm-6">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                </div>
+                <div class="modal-body">
 
-               
-            <form> 
-                    <!-- Errors -->
-                    <div class="form-group row">
-                        <div class="col-sm-12" id="taskEditErrors">
+
+                    <form>
+                        <!-- Errors -->
+                        <div class="form-group row">
+                            <div class="col-sm-12" id="taskEditErrors">
+
+                            </div>
+                        </div>
+                        <hr />
+
+                        <!-- TaskID -->
+                        <input type="hidden" id="editTaskId" name="editTaskId" value="">
+
+                        <!-- Title -->
+                        <div class="form-group row">
+                            <label for="Title" class="col-sm-2 col-form-label text-left">Title</label>
+                            <input id="editTaskTitle" name="editTaskTitle" class="col-sm-10 form-control" type="text" placeholder="" required />
+                        </div>
+
+                        <!-- Description -->
+                        <div class="form-group row">
+                            <label for="Description" class="col-sm-2 col-form-label text-left">Description</label>
+                            <textarea class="form-control col-sm-10" name="editTaskDescription" placeholder="" id="editTaskDescription" rows="3" required></textarea>
+                        </div>
+
+                        <!-- Start Date -->
+                        <div class="form-group row">
+                            <label for="StartDate" class="col-sm-2 col-form-label text-left">Start Date</label>
+                            <input id="editTaskStartDate" class="col-sm-10 form-control" value="" name="editTaskStartDate" type="date" required />
+                        </div>
+
+                        <!-- End Date -->
+                        <div class="form-group row">
+                            <label for="EndDate" class="col-sm-2 col-form-label text-left">End Date</label>
+                            <input id="editTaskEndDate" class="col-sm-10 form-control" value="" name="editTaskEndDate" type="date" required />
+                        </div>
+
+                        <!-- Completion Date -->
+                        <div class="form-group row">
+                            <label for="CompletionDate" class="col-sm-2 col-form-label text-left">Completion</label>
+                            <input id="editTaskCompletionDate" class="col-sm-10 form-control" value="" name="editTaskCompletionDate" type="date" required />
+                        </div>
+
+                        <!-- Priority -->
+                        <div class="form-group row">
+                            <label for="Priority" class="col-sm-2 col-form-label text-left">Priority</label>
+                            <select class="form-control col-sm-10" value="" id="editTaskPriority" name="editTaskPriority" required>
+                                <option value="Low">Low</option>
+                                <option value="Medium">Medium</option>
+                                <option value="High">High</option>
+                            </select>
 
                         </div>
-                    </div>
-                    <hr />
 
-                    <!-- TaskID -->
-                    <input type="hidden" id="editTaskId" name="editTaskId" value="">
 
-                    <!-- Title -->
-                    <div class="form-group row">
-                        <label for="Title" class="col-sm-4 col-form-label">Title:</label>
-                        <div class="col-sm-6">
-                            <input id="editTaskTitle" name="editTaskTitle" class="form-control" type="text" placeholder="" required />
+                        <div class="modal-footer">
+                            <!-- Add Button -->
+                            <input id="taskEditBtn" type="button" class="btn btn-primary" name="Update" value="Update" />
+                            <button type="button" id="taskClose" class="btn btn-danger" data-dismiss="modal">Close</button>
                         </div>
-                    </div>
-
-                    <!-- Description -->
-                    <div class="form-group row">
-                        <label for="Description" class="col-sm-4 col-form-label">Description:</label>
-                        <div class="col-sm-6">
-                            <textarea class="form-control" name="editTaskDescription" placeholder="" id="editTaskDescription" rows="3" required></textarea>
-                        </div>
-                    </div>
-
-                    <!-- StartDate & EndDate Labels -->
-                    <div class="form-group row">
-                        <label for="StartDate" class="col-sm-6 col-form-label text-center">Start Date</label>
-                        <label for="EndDate" class="col-sm-6 col-form-label text-center">End Date</label>
-
-                    </div>
-
-                    <!-- StartDate & EndDate Inputs -->
-                    <div class="form-group row">
-                        <div class="col-sm-6 text-center">
-                            <input id="editTaskStartDate" value="" name="editTaskStartDate" type="date" required />
-                        </div>
-                        <div class="col-sm-6 text-center">
-                            <input id="editTaskEndDate" value="" name="editTaskEndDate" type="date" required />
-                        </div>
-                    </div>
-
-                    <!-- CompletionDate Label -->
-                    <div class="form-group row">
-                        <label for="CompletionDate" class="col-sm-12 col-form-label text-center">Completion Date</label>
-                    </div>
-
-                    <div class="form-group row">
-                        <div class="col-sm-12 text-center">
-                            <input id="editTaskCompletionDate" value="" name="editTaskCompletionDate" type="date" required />
-                        </div>
-                    </div>
-
-
-
-                    <!-- Priority -->
-                    <div class="form-group row">
-                        <label for="Priority" class="col-sm-3 col-form-label text-center">Priority</label>
-                        <select class="form-control" value="" id="editTaskPriority" name="editTaskPriority" required>
-                            <option value="Low">Low</option>
-                            <option value="Medium">Medium</option>
-                            <option value="High">High</option>
-                        </select>
-
-                    </div>
-
-
-                    <div class="modal-footer">
-                        <!-- Add Button -->
-                        <input id="taskEditBtn" type="button" class="btn btn-default" name="Update" value="Update" />
-                    </div>
-                </form>
+                    </form>
 
                 </div> <!-- Modal Body Ends here -->
 
-        </div> <!-- Modal Content Ends here -->
+            </div> <!-- Modal Content Ends here -->
     </div> <!-- Modal Dialog Ends here -->
 </div>
 
