--- a/WhiteBears/Views/Project/_DocumentDetail.cshtml
+++ b/WhiteBears/Views/Project/_DocumentDetail.cshtml
@@ -7,8 +7,14 @@
         <!-- Modal content-->
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title">Document</h4>
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <div class="form-group">
+                    <div class="col-sm-6">
+                        <h4 class="modal-title text-left">Document</h4>
+                    </div>
+                    <div class="col-sm-6">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+                </div>
             </div>
             <div class="modal-body">
                 <!-- Errors -->
@@ -61,7 +67,8 @@
 
                             <div class="modal-footer">
                                 <!-- Add Button -->
-                                <input id="downloadDoc" type="button" class="btn btn-default" name="downloadDoc" value="Download" style="float:left;" />
+                                <input id="downloadDoc" type="button" class="btn btn-primary" name="downloadDoc" value="Download" style="float:left;" />
+                                <button type="button" id="taskClose" class="btn btn-danger" data-dismiss="modal">Close</button>
                             </div>
                             
                         </div> <!-- Modal Body Ends here -->
