--- a/WhiteBears/Views/Project/_DocumentDetailPM.cshtml
+++ b/WhiteBears/Views/Project/_DocumentDetailPM.cshtml
@@ -3,25 +3,41 @@
 <div id="documentDetailsModal" class="modal fade" role="dialog">
     <div class="modal-dialog" style="left:0% !important">
 
+
         <!-- Modal content-->
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title">Document</h4>
-                
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
+
+                <div class="form-group">
+                    <div class="col-sm-6">
+                        <h4 class="modal-title text-left">Document</h4>
+                    </div>
+                    <div class="col-sm-6">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+                </div>
+
             </div>
             <div class="modal-body">
                 <!-- Errors -->
                 <div class="form-group row">
                     <div class="col-sm-12" id="taskErrors">
+
                     </div>
-                    <H3 id="FileName" name="FileName" style="float:left;margin:0px;"></H3>
                 </div>
                 <hr />
-
                 <div class="container-fluid">
                     <div class="row">
                         <div class="Contain">
+                            <!-- Document Id -->
+                            @Html.HiddenFor(x => x.DocumentId)
+
+                            <!-- File Name -->
+                            <div class="form-group row">
+                                <label for="FileName">File name</label>
+                                <text id="FileName" name="FileName"></text>
+                            </div>
+
                             <!-- Document Id -->
                             @Html.HiddenFor(x => x.DocumentId)
 
@@ -57,14 +73,16 @@
 
                             <div class="modal-footer">
                                 <!-- Add Button -->
-                                <input id="downloadDoc" type="button" class="btn btn-default" name="downloadDoc" value="Download" style="float:left;" />
-                                <input id="deleteDoc" type="button" class="btn btn-default" name="deleteDoc" value="Delete" />
+                                <input id="downloadDoc" type="button" class="btn btn-primary" name="downloadDoc" value="Download" style="float:left;" />
+                                <input id="deleteDoc" type="button" class="btn btn-primary" name="deleteDoc" value="Delete" />
+                                <button type="button" id="taskClose" class="btn btn-danger" data-dismiss="modal">Close</button>
                             </div>
 
                         </div> <!-- Modal Body Ends here -->
-                        </div>
-                    </div> <!-- Modal Content Ends here -->
                     </div>
                 </div>
             </div>
 
+        </div> <!-- Modal Content Ends here -->
+    </div>
+</div>
