--- a/WhiteBears/Views/Project/TaskDetailView.cshtml
+++ b/WhiteBears/Views/Project/TaskDetailView.cshtml
@@ -65,6 +65,13 @@
                                 <Label for="taskPriority">Priority </Label>
                                 <text id="taskPriority" name="taskPriority"></text>
                             </div>
+
+                       
+                            <!-- Task Title -->
+                            <div class="form-group  row">
+                                <Label for="taskUser" class="hidden" id="taskUser">User </Label>
+                                <text id="taskDetailUser" class="hidden" name="taskDetailUser"></text>
+                            </div>
                         </div>
                     </div>
                     <div class="modal-footer">
